package com.application.model;

/**
 * Classe que representa um passageiro do sistema
 * Requisito 1: Classe com atributos privados, métodos públicos e construtores adequados
 * Requisito 9: Uso de atributo estático para contador automático de IDs
 */
public class Passageiro {
    private static int contador = 1; // Requisito 9: Atributo estático

    private int id;
    private String nome;
    private String cpf;
    private String telefone;

    public Passageiro(String nome, String cpf, String telefone) {
        this.id = contador++;
        this.nome = nome;
        this.cpf = cpf;
        this.telefone = telefone;
    }

    // Getters e Setters (Requisito 1: encapsulamento)
    public int getId() {
        return id;
    }

    public String getNome() {

        return nome;
    }
    public void setNome(String nome) {
        this.nome = nome;

    }

    public String getCpf() {
        return cpf;

    }
    public void setCpf(String cpf) {
        this.cpf = cpf;

    }
    public String getTelefone() {
        return telefone;

    }
    public void setTelefone(String telefone) {
        this.telefone = telefone;
    }

}